--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <h1>Meteo Friuli</h1>
+        <h1>Meteo del Friuli</h1>
         <table id="sfondo" class="tabella">
             <tr>
                 <th>Provincia</th>
