nuovo branch temperatura per stupidi

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 
             <tr>
                 <td>Pordenone</td>
-                <td class="temperatura">21°C</td>
+                <td class="temperatura">37°F</td>
                 <td>Soleggiato</td>
             </tr>
 
             <tr>
                 <td>Udine</td>
-                <td class="temperatura">20°C</td>
+                <td class="temperatura">100°F</td>
                 <td>Soleggiato</td>
             </tr>
 
             <tr>
                 <td>Gorizia</td>
-                <td class="temperatura">18°C</td>
+                <td class="temperatura">18°F</td>
                 <td>Nuvoloso</td>
             </tr>
 
             <tr>
                 <td>Trieste</td>
-                <td class="temperatura">21°C</td>
+                <td class="temperatura">21°F</td>
                 <td>Nuvoloso</td>
             </tr>
 
